<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/username"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/title"
            android:inputType="text"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/username"
            android:inputType="textPassword"
            android:autofillHints="password"
            />

        <EditText
            android:id="@+id/verifyPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/verifyPassword"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />

        <EditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/verifyPassword"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            />

        <EditText
            android:id="@+id/phone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/phone"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/email"
            android:inputType="phone"
            android:autofillHints="phone"
            />

        <Button
            android:id="@+id/signUp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:text="@string/signUp"
            android:textSize="25sp"
            android:layout_below="@+id/phone"
            />

        <Button
            android:id="@+id/signIn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:text="@string/signIn"
            android:textSize="25sp"
            android:layout_below="@id/signUp"
            />

    </RelativeLayout>

</ScrollView>