<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PostActivity"
    android:id="@+id/frame_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"

            android:layout_width="250dp"
            android:layout_height="200dp"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/default_image"
            />

        <Button
            android:id="@+id/uploadPhoto"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/uploadPhoto"
            />

        <EditText
            android:id="@+id/name"

            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:layout_below="@id/uploadPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/itemName"
            android:inputType="text"
            android:minHeight="50dp"
            />

        <EditText
            android:id="@+id/description"

            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/itemDescription"
            android:inputType="textMultiLine"
            android:minHeight="50dp" />

        <Button
            android:id="@+id/post"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="8dp"
            android:text="@string/post"
            />

    </RelativeLayout>

</FrameLayout>