<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:id="@+id/frame_container">

        <Button
            android:id="@+id/trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Trade"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/itemImage"

            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"

            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/default_image"
            android:layout_below="@id/trade"/>

        <TextView
            android:id="@+id/itemName"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_below="@+id/itemImage"
            android:text="@string/itemNameTest"
            />

        <TextView
            android:id="@+id/username"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/itemName"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:text="@string/usernameTest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemDescription"

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:maxHeight="180dp"
            android:scrollbars="vertical"
            android:text="@string/itemDescriptionTest"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/itemDescription"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemID"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="20dp"
                android:gravity="right" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>